# AstroSubQualityEvaluation

./: .gitignore  README.md  astro-eval.spec  astro_eval.toml  astro_eval.toml.example  astro_eval_main.py  astro_eval_siril.py  build.bat  installer.iss  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
astro_eval/: __init__.py  analysis.py  background.py  cli.py  config_loader.py  image_loader.py  metrics.py  psf_fitting.py  report.py  scoring.py  star_detection.py  trail_detection.py
tests/: test_image_loader_scaling.py  test_scoring_behavior.py
